--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-query": "^3.34.19",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-select": "^5.3.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
